--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,20 @@
+# https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
   es2021: true
   node: true
+  jest: true
+
 extends:
   - airbnb-base
+
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+
 rules:
   no-console: off
-  import/extensions: off
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
