Add ashes before two "run", add empty line at the end of Makefile

--- a/.github/workflows/main-check.yml
+++ b/.github/workflows/main-check.yml
@@ -11,8 +11,8 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      run: make install
-      run: make lint
+      - run: make install
+      - run: make lint
 
       - name: Test & publish code coverage
         # Publish code coverage on Code Climate
