--- a/__fixtures__/file3.yml
+++ b/__fixtures__/file3.yml
@@ -1,6 +1,6 @@
-# Не забыть попробовать добавить кавычки и в ключи, и в значения
-# Посмотреть правильные yaml конфиги
-host: hexlet.io
+---
+# Lines 3 and 5 contains different types of quotes to test this example of YAML files
+host: 'hexlet.io'
 timeout: 50
-proxy: 123.234.53.22
+"proxy": 123.234.53.22
 follow: false
