--- a/__fixtures__/file3.yml
+++ b/__fixtures__/file3.yml
@@ -1,6 +1,18 @@
 ---
-# Lines 3 and 5 contains different types of quotes to test this example of YAML files
-host: 'hexlet.io'
-timeout: 50
-"proxy": 123.234.53.22
-follow: false
+common:
+  setting1: Value 1
+  setting2: 200
+  setting3: true
+  setting6:
+    key: value
+    doge:
+      wow: ''
+group1:
+  baz: bas
+  foo: bar
+  nest:
+    key: value
+group2:
+  abc: 12345
+  deep:
+    id: 45
